2012-02-13

  version UNRELEASED:
	* Added Estonian translation (thanks Anari Jalakas).

2012-01-09

  version 0.8.18.1.7:
	* Support search and replace history and
	  option: --disable-search-history
	* Updated Japanese translation (Toshiharu Kudoh).
	* Updated Russian translation (Aleksej Perepyolkin).
	* Make everything compatible with gcc -std=c1x

2011-12-09

  version 0.8.18.1.6:
	* Support simple statistics and option: --disable-statistics
	  Translation wanted.
	* Fix build failure with "-Werror=format-security" flag

2011-11-09

  version 0.8.18.1.5:
	* New icon set under the license:
	  GNU General Public License version 2
	  Copyright (C) 2011  Jack Gandy <scionicspectre AT gmail DOT com>
	* Make everything GTK+ 3.3.2 compatible
	* Code clean up

2011-10-08

  version 0.8.18.1.4:
	* New options: --disable-largefile,
	               --disable-xinput2,
	               --enable-gtkgrid
	* Make everything GTK+ 3.2.0 compatible

2011-09-08

  version 0.8.18.1.3:
	* Fix encoding and newline selection (a bug NOT in Leafpad, ouch!)
	* Support GtkGrid
	* Provide a clearsigned SHA1SUMS using
	  RSA key ID BE8BA819 and DSA key ID E98D6159

2011-09-05

  version 0.8.18.1.2:
	* Fix print function (This is a bug NOT in Leafpad, oops.)

2011-09-01

  version 0.8.18.1.1:
	* Ported to GTK+ 3.x
	* Sync license data with latest files published by FSF

2010-12-23

  version 0.8.18.1:
	* Fixed saving (Jan-Erik Rediger, Edward Sheldrake).

2010-12-18

  version 0.8.18:
	* Fixed action when file name contains colon
	  (John Lindgren, Mikko Viinamaki).
	* Fixed memory leak on saving file (Dmitry Artamonow).
	* Fixed caseless search bug (Dmitry Artamonow).
	* Fixed memory leak on line numbering (Hongwei Xi).
	* Fixed truncation on saving file (Alex, brian m. carlson).
	* Added translations: eo, gl.
	* Updated translations: fi, hu.

2009-10-27

  version 0.8.17:
	* Fixed find dialog behaviour with GTK+ 2.18 (Radu-Cristian, MoD).